fix koha link in footer, weird spacing

--- a/libraries/libraries/static/scss/components/footer/_footer-section.scss
+++ b/libraries/libraries/static/scss/components/footer/_footer-section.scss
@@ -144,12 +144,6 @@
         }
     }
 
-    &.koha.button {
-        display: table;
-        margin-bottom: 10px;
-        margin-left: 7px;
-    }
-
     &:hover {
         opacity: .7;
     }
